# python-template

./: .gitignore  README.rst  requirements.txt  setup.cfg  tox.ini
config/: README.rst
data/: README.rst
docs/: README.rst
examples/: README.rst
src/: app.py
