[metadata]
name = package
version = 0.0.0
license = MIT
description = ""
long_description = file: README.rst
author = <Author name>
author_email = <Optional: author e-mail>
classifiers=
   <classifier 1>
   <classifier 2>
   <...>
   <classifier m>

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   tox
   black
   isort

[options.packages.find]
where=src
